# learn_pico_sdk

./: README.md  how_to.md
pio_blink/: CMakeLists.txt  blink.pio  main.c
pio_blink_PL9823-F5/: CMakeLists.txt  blink_PL9823F5.pio  main.c
